<resources>
    <string name="app_name">QantasTechTest</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="check_ur_internet_connection">Please check your internet connection</string>
    <string name="country_name">Country Name</string>
    <string name="city_name">City Name</string>
    <string name="region">Region</string>
    <string name="location">Location</string>
    <string name="time_zone">Time Zone</string>
    <string name="loading_data">Loading Data</string>
    <string name="airport_data">airportData</string>
    <string name="there_is_no_data_present_currently">There is no data present currently</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="n_a">N/A</string>
</resources>