<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="#fff"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/city_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/city"
                        android:layout_alignParentEnd="true"
                        android:text="N/A" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time_zone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_zone" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/time_zone_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/time_zone"
                        android:layout_alignParentEnd="true"
                        android:text="N/A" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/country_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country_name" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/country_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/country_name"
                        android:layout_alignParentEnd="true"
                        android:text="N/A" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/region"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/region" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/region_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/region"
                        android:layout_alignParentEnd="true"
                        android:text="N/A" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@id/location"
                        android:layout_alignParentEnd="true"
                        android:text="N/A" />

                </RelativeLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/design_default_color_primary"
        android:text="Back"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_view" />
</androidx.constraintlayout.widget.ConstraintLayout>